--- a/css/aboutMe.css
+++ b/css/aboutMe.css
@@ -46,6 +46,18 @@ body, html{
   background-position: center;
 }
 
+#tilePicGif{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+.tilePic{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
 .hobbyTile{
   position: relative; 
   margin: 16px 16px 32px;
