--- a/css/aboutMe.css
+++ b/css/aboutMe.css
@@ -4,20 +4,21 @@ body, html{
 }
 
 .social-button {
-  color: #888;
-  padding: 8px;
+  height: 32px;
+  width: 32px;
+  margin: 8px;
 }
 
-.fa-google-plus-square:hover {
-    color: #dd4b39;
+.google-plus:hover path{
+  fill: #dd4b39;
 }
 
-.fa-github-square:hover {
-    color: #4183c4;
+.github:hover path{
+  fill: #4183c4;
 }
 
-.fa-linkedin-square:hover {
-    color: #0077b5;
+.linkedin:hover path{
+  fill: #0077b5;
 }
 
 .aboutme-title{
@@ -26,11 +27,6 @@ body, html{
   padding-left: 32px;
   color: #1976D2;
   text-align: center;
-}
-
-.aboutme-toolbar{
-  padding-bottom: 128px;
-  overflow: auto;
 }
 
 .side-margin{
@@ -65,18 +61,21 @@ body, html{
   background: linear-gradient(240deg, #00BCD4 0%, #00897B 51%, #388E3C 75%);
 }
 
-#hobbyPic{
+.tile-size{
   height: 296px;
+}
+
+#hobbyPic{
   position: relative;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
 
-  -webkit-transition: all 1s;
-  -moz-transition: all 1s;
-  -o-transition: all 1s;
-  -ms-transition: all 1s;
-  transition: all 1s;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  -ms-transition: all 0.5s;
+  transition: all 0.5s;
 }
 
 .hobbyPicText{
@@ -109,14 +108,35 @@ body, html{
 .hobbyTileButton{
   position: absolute;
   top: 16px;
-    right: 16px;
+  right: 16px;
   background: linear-gradient(
-      rgba(0, 0, 0, 0.25),
-      rgba(0, 0, 0, 0.25));
+    rgba(0, 0, 0, 0.25),
+    rgba(0, 0, 0, 0.25));
+}
+
+.hobbyTileLoader{
+  position: absolute;
+  top: 32px;
+  left: 32px;
+  width: calc(100% - 168px);
 }
 
 #hobbyTileReplay{
-    right: 64px;
+  right: 64px;
+}
+
+.list-item-icon{
+  padding: 16px 16px 16px 0px;
+  margin-top: auto;
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-bottom: auto;
+}
+
+.list-item-text{
+  word-break: break-all;
+  margin: 0px;
+  padding: 16px 0px;
 }
 
 .skills{
@@ -126,24 +146,21 @@ body, html{
 .skillsTitle{
   background-color: #fff;
   color: #1976D2;
-    padding: 16px;
+  padding: 16px;
 }
 
 .donuts{
-  padding-left: 16px;
-  width: 232px;
   margin: auto;
-  padding-top: 16px;
-  padding-bottom: 16px;
-  height: 116px;
   margin-bottom: 16px;
 }
 
 .donutNum{
   position: absolute;
-  margin-top: 92px;
-  left: 49%;
-  right: 49%;
+  top: 78px;
+  left: 0;
+  margin: auto;
+  width: 12px;
+  right: 0;
   color: #2196F3;
 }
 
@@ -154,6 +171,13 @@ body, html{
 .slice:hover {
   transform: scale(1.1);
   stroke-width: 0px;
+}
+
+.footer-text{
+  margin: auto;
+  padding: 8px;
+  color: #fff;
+  text-align: center;
 }
 
 .fw-100 { font-weight: 100; }
