--- a/css/index.css
+++ b/css/index.css
@@ -4,26 +4,28 @@ body, html{
 }
 
 .social-button {
-  padding: 8px;
+  height: 32px;
+  width: 32px;
+  margin: 12px;
 }
 
-.fa-google-plus-square:hover {
-    color: #dd4b39;
+.google-plus:hover path{
+  fill: #dd4b39;
 }
 
-.fa-github-square:hover {
-    color: #800080;
+.github:hover path{
+  fill: #4183c4;
 }
 
-.fa-linkedin-square:hover {
-    color: #0077b5;
+.linkedin:hover path{
+  fill: #0077b5;
 }
 
 .welcome-img {
   background-image: linear-gradient(
-      rgba(0, 0, 0, 0.4),
-      rgba(0, 0, 0, 0.4)),
-      url("images/header.jpg");
+    rgba(0, 0, 0, 0.4),
+    rgba(0, 0, 0, 0.4)),
+    url("images/header.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -153,9 +155,11 @@ md-chips-wrap.md-chips.ng-scope.md-readonly {
 
 .footer-text{
   margin: auto;
-  padding: 8px;
+  padding: 8px 32px;
   color: #fff;
   text-align: center;
+  font-size: small;
+  width: calc(100% - 64px);
 }
 
 button.md-no-style.md-button.md-home-theme.md-ink-ripple {
