Added google analytics and updated angular-material to 1.1.1

--- a/css/index.css
+++ b/css/index.css
@@ -169,3 +169,8 @@ md-icon.fa {
   display: block;
   padding-left: 0px;
 }
+
+
+md-chips.md-default-theme .md-chips, md-chips .md-chips {
+  box-shadow: none;
+}
