--- a/public/css/aboutMe.css
+++ b/public/css/aboutMe.css
@@ -9,12 +9,12 @@ body, html{
   margin: 12px;
 }
 
-.google-plus:hover path{
-  fill: #dd4b39;
+.gitlab:hover path{
+  fill: #dd741d;
 }
 
 .github:hover path{
-  fill: #4183c4;
+  fill: #6e5494;
 }
 
 .linkedin:hover path{
