--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+@charset 'UTF-8';
 
-@import "normalize-scss";
-@import "base/generic";
+@import 'normalize-scss';
+@import 'base/generic';
