--- a/src/components/Post/Author/Author.module.scss
+++ b/src/components/Post/Author/Author.module.scss
@@ -10,7 +10,7 @@
   @include margin-bottom(2);
 
   &__bio {
-    &-twitter {
+    &-metadata {
       display: block;
       text-decoration: underline;
     }
