--- a/src/components/Post/Post.module.scss
+++ b/src/components/Post/Post.module.scss
@@ -21,7 +21,7 @@
     padding: 0 24px;
     line-height: $button-height;
     text-align: center;
-    color: $color-base;
+    color: var(--v-color-base);
     border: 1px solid $color-gray-border;
     border-radius: $button-border-radius;
     font-size: $typographic-base-font-size;
@@ -32,11 +32,9 @@
 
     &:hover,
     &:focus {
-      color: $color-primary;
+      color: var(--v-color-primary);
     }
-
   }
-
 }
 
 @include breakpoint-md {
@@ -56,7 +54,5 @@
       top: 30px;
       left: 30px
     }
-
   }
-
 }
