--- a/src/components/Post/Tags/Tags.module.scss
+++ b/src/components/Post/Tags/Tags.module.scss
@@ -21,17 +21,13 @@
         border: 1px solid $color-gray-border;
         text-decoration: none;
         border-radius: $button-border-radius;
-        color: $color-base;
+        color: var(--v-color-base);
 
         &:hover,
         &:focus {
-          color: $color-primary;
+          color: var(--v-color-primary);
         }
-
       }
-
     }
-
   }
-
 }
