--- a/src/components/Sidebar/Contacts/Contacts.module.scss
+++ b/src/components/Sidebar/Contacts/Contacts.module.scss
@@ -11,7 +11,7 @@
     flex-shrink: 0;
     list-style: none;
     padding: 0;
-    margin: 10px -3px;
+    margin: 10px -3px 0px;
     width: 140px;
 
     &-item {
