--- a/src/components/Post/Tags/Tags.module.scss
+++ b/src/components/Post/Tags/Tags.module.scss
@@ -18,10 +18,10 @@
         height: $button-height;
         padding: 0 24px;
         line-height: $button-height;
-        border: 1px solid $color-gray-border;
+        border: 1px solid var(--v-color-border);
         text-decoration: none;
         border-radius: $button-border-radius;
-        color: var(--v-color-base);
+        color: var(--v-color-primary-text);
 
         &:hover,
         &:focus {
