--- a/src/components/Sidebar/Contacts/Contacts.module.scss
+++ b/src/components/Sidebar/Contacts/Contacts.module.scss
@@ -26,12 +26,12 @@
       line-height: $button-height;
       border-radius: 50%;
       text-align: center;
-      border: 1px solid $color-gray-bg;
+      border: 1px solid var(--v-color-border);
 
       &-link {
         border: 0;
         display: flex;
-        color: var(--v-color-base);
+        color: var(--v-color-primary-text);
   
         &:hover,
         &:focus {
