--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -15,8 +15,7 @@
         &__inner {
             padding: 30px 20px 0;
             &:after {
-                background: $color-gray-border;
-                background: linear-gradient(to bottom, $color-gray-border 0%, $color-gray-border 48%, $color-white 100%);
+                background: var(--v-color-border);
                 position: absolute;
                 content: '';
                 width: 1px;
