--- a/src/components/Sidebar/Author/Author.module.scss
+++ b/src/components/Sidebar/Author/Author.module.scss
@@ -16,17 +16,17 @@
     @include margin(.5, 0, .5, 0);
 
     &-link {
-      color: var(--v-color-base);
+      color: var(--v-color-primary-text);
 
       &:hover,
       &:focus {
-        color: var(--v-color-base)
+        color: var(--v-color-primary-text)
       }
     }
   }
 
   &__subtitle {
-    color: $color-gray;
+    color: var(--v-color-secondary-text);
     @include line-height(1);
     @include margin-bottom(1)
   }
