--- a/src/components/Sidebar/Copyright/Copyright.module.scss
+++ b/src/components/Sidebar/Copyright/Copyright.module.scss
@@ -2,6 +2,6 @@
 @import '../../../assets/scss/mixins';
 
 .copyright {
-  color: lighten($color-gray, 18%);
+  color: var(--v-color-secondary-text);
   font-size: $typographic-small-font-size;
 }
