--- a/src/assets/scss/base/_generic.scss
+++ b/src/assets/scss/base/_generic.scss
@@ -16,7 +16,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-
+  transition: background-color 0.3s ease, color 0.3s ease;
   --v-color-primary: #{$color-light-mode-primary};
   --v-color-secondary: #{$color-light-mode-secondary};
   --v-color-primary-text: #{$color-light-mode-primary-text};
@@ -32,6 +32,7 @@ body {
 
 body.dark {
   -webkit-font-smoothing: antialiased;
+  transition: background-color 0.3s ease, color 0.3s ease;
 
   --v-color-primary: #{$color-dark-mode-primary};
   --v-color-secondary: #{$color-dark-mode-secondary};
