--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -5,7 +5,7 @@
 // Theme colors
 $color-light-mode-primary: #5D93FF;
 $color-light-mode-secondary: #F7A046;
-$color-light-mode-primary-text: #222;
+$color-light-mode-primary-text: #121212;
 $color-light-mode-secondary-text: #555;
 $color-light-mode-primary-background: #FFF;
 $color-light-mode-secondary-background: #DDD;
@@ -14,9 +14,9 @@ $color-light-mode-disabled: #AAA;
 
 $color-dark-mode-primary: #5D93FF;
 $color-dark-mode-secondary: #F7A046;
-$color-dark-mode-primary-text: #FFF;
+$color-dark-mode-primary-text: #EDEDED;
 $color-dark-mode-secondary-text: #AAA;
-$color-dark-mode-primary-background: #222;
+$color-dark-mode-primary-background: #121212;
 $color-dark-mode-secondary-background: #444;
 $color-dark-mode-border: #888;
 $color-dark-mode-disabled: #555;
