--- a/src/components/ThemeToggle/ThemeToggle.module.scss
+++ b/src/components/ThemeToggle/ThemeToggle.module.scss
@@ -26,7 +26,7 @@
         &:after {
             display: block;
             position: absolute;
-            content: "";
+            content: '';
             width: 19px;
             height: 19px;
             border-radius: 50%;
@@ -46,7 +46,7 @@
         }
     }
 
-    input[type="checkbox"] {
+    input[type='checkbox'] {
         display: none;
 
         &:checked + label {
