--- a/src/components/Feed/Feed.module.scss
+++ b/src/components/Feed/Feed.module.scss
@@ -1,72 +1,75 @@
-@import '../../assets/scss/variables';
-@import '../../assets/scss/mixins';
 
-.feed {
-  &__item {
-    @include margin-bottom(1.25);
+:export {
+  @import '../../assets/scss/variables';
+  @import '../../assets/scss/mixins';
 
-    &:last-child {
-      @include margin-bottom(.5);
-    }
+  .feed {
+    &__item {
+      @include margin-bottom(1.25);
 
-    &-title {
-      font-size: $typographic-base-font-size * 1.6875;
-      @include line-height(1.5);
-      @include margin-top(0);
-      @include margin-bottom(.5);
+      &:last-child {
+        @include margin-bottom(.5);
+      }
 
-      &-link {
-        color: var(--v-color-primary-text);
+      &_title {
+        font-size: $typographic-base-font-size * 1.6875;
+        @include line-height(1.5);
+        @include margin-top(0);
+        @include margin-bottom(.5);
 
-        &:hover,
-        &:focus {
+        &_link {
           color: var(--v-color-primary-text);
-          border-bottom: 1px solid var(--v-color-primary-text);
-        }
-      }
-    }
-
-    &-description {
-      font-size: $typographic-base-font-size;
-      @include line-height(1);
-      @include margin-bottom(.75);
-    }
-
-    &-meta {
-      &-time {
-        font-size: $typographic-small-font-size;
-        color: var(--v-color-primary-text);
-        font-weight: 600;
-        text-transform: uppercase;
-      }
-
-      &-divider {
-        margin: 0 5px;
-      }
-
-      &-category {
-        &-link {
-          font-size: $typographic-small-font-size;
-          color: var(--v-color-secondary);
-          font-weight: 600;
-          text-transform: uppercase;
 
           &:hover,
           &:focus {
-            color: var(--v-color-primary);
+            color: var(--v-color-primary-text);
+            border-bottom: 1px solid var(--v-color-primary-text);
           }
         }
       }
-    }
 
-    &-readmore {
-      font-size: $typographic-base-font-size;
-      color: var(--v-color-primary);
+      &_description {
+        font-size: $typographic-base-font-size;
+        @include line-height(1);
+        @include margin-bottom(.75);
+      }
 
-      &:hover,
-      &:focus {
+      &_meta {
+        &_time {
+          font-size: $typographic-small-font-size;
+          color: var(--v-color-primary-text);
+          font-weight: 600;
+          text-transform: uppercase;
+        }
+
+        &_divider {
+          margin: 0 5px;
+        }
+
+        &_category {
+          &_link {
+            font-size: $typographic-small-font-size;
+            color: var(--v-color-secondary);
+            font-weight: 600;
+            text-transform: uppercase;
+
+            &:hover,
+            &:focus {
+              color: var(--v-color-primary);
+            }
+          }
+        }
+      }
+
+      &_readmore {
+        font-size: $typographic-base-font-size;
         color: var(--v-color-primary);
-        border-bottom: 1px solid var(--v-color-primary);
+
+        &:hover,
+        &:focus {
+          color: var(--v-color-primary);
+          border-bottom: 1px solid var(--v-color-primary);
+        }
       }
     }
   }
