--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -32,7 +32,7 @@ $typographic-small-font-size: 14px;
 
 $typographic-base-line-height: 1.625;
 
-$typographic-leading: round(16 * math.div($typographic-root-font-size, 100) * $typographic-base-line-height);
+$typographic-leading: round(16 * ($typographic-root-font-size / 100) * $typographic-base-line-height);
 
 // Buttons
 $button-height: 35px;
