--- a/src/components/Sidebar/Author/Author.module.scss
+++ b/src/components/Sidebar/Author/Author.module.scss
@@ -15,7 +15,7 @@
     @include line-height(1.125);
     @include margin(.5, 0, .5, 0);
 
-    &-link {
+    &_link {
       color: var(--v-color-primary-text);
 
       &:hover,
