--- a/src/components/Sidebar/Menu/Menu.module.scss
+++ b/src/components/Sidebar/Menu/Menu.module.scss
@@ -9,11 +9,11 @@
     padding: 0;
     margin: 0;
 
-    &-item {
+    &_item {
       padding: 0;
       margin: 10px 0;
 
-      &-link {
+      &_link {
         font-size: $typographic-base-font-size;
         color: var(--v-color-primary-text);
         font-weight: normal;
@@ -25,7 +25,7 @@
           border-bottom: 1px solid var(--v-color-primary);
         }
 
-        &--active {
+        &__active {
           color: var(--v-color-primary-text);
           border-bottom: 1px solid var(--v-color-primary-text);
         }
