--- a/src/components/ThemeToggle/ThemeToggle.module.scss
+++ b/src/components/ThemeToggle/ThemeToggle.module.scss
@@ -1,7 +1,7 @@
 @import '../../assets/scss/variables';
 @import '../../assets/scss/mixins';
 
-.theme-toggle-button {
+.theme_toggle_button {
   box-sizing: border-box;
   display: flex;
   align-items: center;
