Fixed pagination. Fixed All Articles button. Reverted back to proper sass implementation

--- a/src/components/Post/Post.module.scss
+++ b/src/components/Post/Post.module.scss
@@ -71,7 +71,7 @@
       display: block;
     }
 
-    &__home-button {
+    &__home_button {
       padding-top: 8px;
       padding-bottom: 8px;
     }
