--- a/src/components/Pagination/Pagination.module.scss
+++ b/src/components/Pagination/Pagination.module.scss
@@ -9,7 +9,7 @@
     width: 50%;
     text-align: left;
 
-    &-link {
+    &_link {
       color: var(--v-color-secondary);
       font-size: 26px;
       font-weight: bold;
@@ -19,7 +19,7 @@
         color: var(--v-color-primary);
       }
 
-      &--disable {
+      &__disable {
         pointer-events: none;
         color: var(--v-color-disabled);
       }
@@ -30,7 +30,7 @@
     width: 50%;
     text-align: right;
 
-    &-link {
+    &_link {
       color: var(--v-color-secondary);
       font-size: 26px;
       font-weight: bold;
@@ -40,7 +40,7 @@
         color: var(--v-color-primary);
       }
 
-      &--disable {
+      &__disable {
         pointer-events: none;
         color: var(--v-color-disabled);
       }
